added transiton from start trip button to next one

--- a/android-app/app/src/main/res/layout/activity_record_trip.xml
+++ b/android-app/app/src/main/res/layout/activity_record_trip.xml
@@ -103,6 +103,7 @@
         android:textOn="@string/stop_scanning"
         android:textOff="@string/start_scanning"
         android:checked="true"
+        android:transitionName="@string/transition_start_trip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
