--- a/android-app/app/src/main/res/layout/activity_record_trip.xml
+++ b/android-app/app/src/main/res/layout/activity_record_trip.xml
@@ -9,7 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button_start"
         android:background="@color/primaryColor"
         android:gravity="center_vertical"
         android:orientation="vertical"
@@ -35,11 +34,12 @@
         android:id="@+id/home_trip_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button_start"
-        android:background="@drawable/rounded_top_corners"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/rounded_corners"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:padding="@dimen/default_padding"
+        android:layout_margin="@dimen/default_padding"
         android:transitionName="@string/transition_trip_info">
 
         <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
@@ -89,23 +89,18 @@
 
         </LinearLayout>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_start"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="8sp"
+            android:text="@string/stop_scanning"
+            android:transitionName="@string/transition_start_trip"
+            app:icon="@drawable/icon_record"
+            app:iconSize="@dimen/material_text_title" />
 
     </LinearLayout>
-
-    <ToggleButton
-        android:id="@+id/button_start"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_padding"
-        android:layout_alignParentBottom="true"
-        android:background="@color/primaryColor"
-        android:textColor="@color/primaryTextColor"
-        android:textOn="@string/stop_scanning"
-        android:textOff="@string/start_scanning"
-        android:checked="true"
-        android:transitionName="@string/transition_start_trip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </RelativeLayout>
