--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -45,7 +45,7 @@
 
     </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/home_fab"
         style="@style/Widget.MaterialComponents.Button.Icon"
         android:layout_width="wrap_content"
