--- a/android-app/app/src/main/res/layout/fragment_onboarding.xml
+++ b/android-app/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
@@ -8,37 +7,33 @@
     android:padding="@dimen/default_padding"
     tools:context=".ui.PlaceholderFragment">
 
-    <com.airbnb.lottie.LottieAnimationView
+    <ImageView
         android:id="@+id/onboarding_fragment_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/onboarding_fragment_title"
-        android:padding="?attr/actionBarSize"
-        android:layout_marginBottom="?attr/actionBarSize"
-        app:lottie_loop="true"
-        app:lottie_autoPlay="true" />
+        android:layout_height="400dp"
+        android:padding="?attr/actionBarSize"/>
 
     <TextView
         android:id="@+id/onboarding_fragment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/onboarding_fragment_subtitle"
+        android:layout_below="@+id/onboarding_fragment_image"
+        android:layout_marginTop="?attr/actionBarSize"
         android:text="title"
         android:textSize="@dimen/material_text_headline"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32sp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/onboarding_fragment_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/onboarding_fragment_title"
+        android:layout_marginTop="32sp"
         style="@style/material_subhead"
         android:text="subtitle"
         android:gravity="center"
         android:textColor="@color/primaryDarkGray"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="56sp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
