--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -27,12 +27,27 @@
             android:layout_height="20dp"
             app:rcBackgroundPadding="5dp"
             app:rcProgressColor="@color/primaryLightColor"
-            app:rcBackgroundColor="@color/primaryLightGray"
-            />
+            app:rcBackgroundColor="@color/primaryLightGray" />
 
-        <TextView
-            style="@style/material_subhead"
-            android:text="Daily Budget" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4sp"
+            android:layout_marginEnd="4sp">
+
+            <TextView
+                style="@style/material_subhead"
+                android:layout_width="wrap_content"
+                android:text="Daily Budget" />
+
+            <TextView
+                android:id="@+id/home_emission_budget"
+                style="@style/material_subhead"
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:text="55g/5654g" />
+
+        </RelativeLayout>
 
         <TextView
             style="@style/material_title"
