--- a/android-app/app/src/main/res/layout/fragment_onboarding.xml
+++ b/android-app/app/src/main/res/layout/fragment_onboarding.xml
@@ -20,6 +20,7 @@
         android:layout_below="@+id/onboarding_fragment_image"
         android:layout_marginTop="?attr/actionBarSize"
         android:text="title"
+        android:textColor="@android:color/black"
         android:textSize="@dimen/material_text_headline"
         android:textStyle="bold"
         android:gravity="center"
