adjusted onboarding bottom margin

--- a/android-app/app/src/main/res/layout/activity_onboarding.xml
+++ b/android-app/app/src/main/res/layout/activity_onboarding.xml
@@ -16,6 +16,7 @@
         android:id="@+id/onboarding_navigation"
         android:layout_width="match_parent"
         android:layout_height="40sp"
+        android:layout_marginBottom="@dimen/default_padding"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
