--- a/android-app/app/src/main/res/layout/fragment_carbon_consumption_stats.xml
+++ b/android-app/app/src/main/res/layout/fragment_carbon_consumption_stats.xml
@@ -1,7 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/statistics_date_filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:checkedChip="@+id/statistics_one_month_button"
+        app:chipSpacingHorizontal="@dimen/default_padding"
+        app:singleLine="true"
+        app:selectionRequired="true"
+        app:singleSelection="true">
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/statistics_one_month_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:text="@string/statistics_one_month_label"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/statistics_three_months_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:text="@string/statistics_three_months_label"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/statistics_six_months_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:text="@string/statistics_six_months_label"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/statistics_one_year_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:text="@string/statistics_one_year_label"/>
+
+    </com.google.android.material.chip.ChipGroup>
 
     <LinearLayout
         android:layout_width="match_parent"
