--- a/android-app/app/src/main/res/layout/fragment_onboarding.xml
+++ b/android-app/app/src/main/res/layout/fragment_onboarding.xml
@@ -10,15 +10,19 @@
     <ImageView
         android:id="@+id/onboarding_fragment_image"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:padding="?attr/actionBarSize"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginRight="?attr/actionBarSize"
+        android:layout_marginLeft="?attr/actionBarSize"
+        android:src="@drawable/icon_sustainability"
+        android:adjustViewBounds="true"/>
 
     <TextView
         android:id="@+id/onboarding_fragment_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/onboarding_fragment_image"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginTop="@dimen/default_padding"
         android:text="title"
         android:textColor="@android:color/black"
         android:textSize="@dimen/material_text_headline"
@@ -33,7 +37,7 @@
         android:layout_below="@id/onboarding_fragment_title"
         android:layout_marginTop="32sp"
         style="@style/material_subhead"
-        android:text="subtitle"
+        android:text="@string/onboarding_3_subtitle"
         android:gravity="center"
         android:textColor="@color/primaryDarkGray"
         android:layout_centerHorizontal="true" />
