--- a/android-app/app/src/main/res/layout/trip_summary_bottom_sheet.xml
+++ b/android-app/app/src/main/res/layout/trip_summary_bottom_sheet.xml
@@ -23,8 +23,8 @@
 
         <ImageButton
             android:id="@+id/trip_completed_toggle_bottom_sheet"
-            android:layout_width="@dimen/material_text_subhead"
-            android:layout_height="@dimen/material_text_subhead"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/material_text_title"
             android:src="@drawable/icon_expand_more"
             android:background="@android:color/transparent"
             android:layout_gravity="center" />
